--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
+  "scripts": {
+    "start": "node server/server.js"
+  }
   "devDependencies": {
     "babel": "^6.23.0",
+    "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
-    "webpack": "^2.3.2"
+    "webpack": "^2.3.2",
+    "webpack-dev-server": "^2.4.2"
   }
 }
