--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.15.2",
     "mongo": "^0.1.0",
     "mongoose": "^4.9.2",
+    "phantomjs": "^2.1.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
