--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "Derek Miranda <derek.miranda.1992@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
     "mongo": "^0.1.0",
     "mongoose": "^4.9.2",
@@ -28,6 +30,7 @@
     "babel-preset-react": "^6.23.0",
     "css-loader": "^0.28.0",
     "node-sass": "^4.5.2",
+    "nodemon": "^1.11.0",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
     "webpack": "^2.3.2",
