--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "webshot": "^0.18.0"
   },
   "scripts": {
-    "start": "node server/server.js",
+    "start": "nodemon server/server.js",
     "webpack": "webpack -w",
     "wds": "webpack-dev-server --progress"
   },
