--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongo": "^0.1.0",
     "mongoose": "^4.9.2",
     "phantomjs": "^2.1.7",
+    "query-string": "^4.3.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "webshot": "^0.18.0"
