--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
-    "webshot": "^0.18.0"
+    "webshot": "^0.18.0",
+    "socket.io": "^1.7.3"
   },
   "scripts": {
     "start": "nodemon server/server.js",
